--- a/reference.bib
+++ b/reference.bib
@@ -45,7 +45,6 @@
   number  = {3}
 }
 
-
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -62,6 +61,7 @@
   year      = {2003}
 }
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -71,12 +71,11 @@
 
 
 @inproceedings{Alayrac2020,
-  title     = {Self-Supervised MultiModal Versatile Networks.},
+  title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NIPS,
   year      = {2020}
 }
-
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -165,13 +164,13 @@
   number  = {7}
 }
 
+
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
   booktitle = {2011 IEEE International Conference on Computer Vision Workshops},
   year      = {2011}
 }
-
 
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
@@ -245,13 +244,13 @@
   year    = {2018}
 }
 
+
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
   author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
@@ -280,6 +279,7 @@
   number  = {1}
 }
 
+
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
   title   = {A method for registration of {3D} shapes},
@@ -288,7 +288,6 @@
   volume  = {14},
   number  = {2}
 }
-
 
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
@@ -490,6 +489,7 @@
   year      = {2006}
 }
 
+
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
   title     = {On visual similarity based {3D} model retrieval},
@@ -509,7 +509,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
@@ -526,13 +525,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -548,6 +547,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -562,7 +562,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -769,6 +768,7 @@
   year    = {2018}
 }
 
+
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
   title   = {{QEx}: robust quad mesh extraction},
@@ -788,7 +788,6 @@
   number  = {6}
 }
 
-
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -798,6 +797,7 @@
   number  = {5}
 }
 
+
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
   title   = {Why does unsupervised pre-training help deep learning?},
@@ -806,7 +806,6 @@
   volume  = {11},
   number  = {19}
 }
-
 
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
@@ -921,6 +920,7 @@
   year      = {2011}
 }
 
+
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
   title   = {Randomized cuts for {3D} mesh analysis},
@@ -939,7 +939,6 @@
   volume  = {33},
   number  = {3}
 }
-
 
 @book{Goodfellow2016,
   title     = {Deep Learning},
@@ -990,6 +989,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
   title     = {{AtlasNet: A Papier-M\^{a}ch\'{e}} approach to learning {3D} surface generation},
@@ -1006,7 +1006,6 @@
   volume  = {26},
   number  = {3}
 }
-
 
 @misc{Guennebaud2010,
   author       = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
@@ -1592,6 +1591,14 @@
   year      = {1998}
 }
 
+
+@inproceedings{Koch2019,
+  author    = {Koch, Sebastian and Matveev, Albert and Jiang, Zhongshi and Williams, Francis and Artemov, Alexey and Burnaev, Evgeny and Alexa, Marc and Zorin, Denis and Panozzo, Daniele},
+  title     = {{ABC}: A big {CAD} model dataset for geometric deep learning},
+  booktitle = CVPR,
+  year      = {2019}
+}
+
 @inproceedings{Kocher1999,
   author    = {C. Kocher and J. Jaffe and B. Jun},
   booktitle = {Advances in Cryptology},
@@ -1698,6 +1705,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Levy2013,
   author    = {L\'{e}vy, Bruno and Bonneel, Nicolas},
   title     = {Variational anisotropic surface meshing with {Voronoi} parallel linear enumeration},
@@ -1715,7 +1723,6 @@
   number  = {5},
   year    = {2010}
 }
-
 
 @article{Li2011,
   author  = {Li, Yangyan and Wu, Xiaokun and Chrysathou, Yiorgos and Sharf, Andrei and Cohen-Or, Daniel and Mitra, Niloy J.},
@@ -1750,13 +1757,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
-
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -1773,13 +1780,13 @@
   number  = {4},
   year    = {2021}
 }
-
 @article{Li2021a,
   title   = {Can Vision Transformers Perform Convolution?},
   author  = {Shanda Li and Xiangning Chen and Di He and Cho-Jui Hsieh},
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
+
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1881,6 +1888,13 @@
   author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
   booktitle = ICCV,
   year      = {2021}
+}
+
+@article{Liu2021d,
+  title   = {Self-supervised learning: Generative or contrastive},
+  author  = {Liu, Xiao and Zhang, Fanjin and Hou, Zhenyu and Mian, Li and Wang, Zhaoyu and Zhang, Jing and Tang, Jie},
+  journal = {IEEE Transactions on Knowledge and Data Engineering},
+  year    = {2021}
 }
 
 @inproceedings{Loffe2015,
@@ -2159,12 +2173,14 @@
   year    = {2009}
 }
 
+
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
   title     = {Geometric texture synthesis by example},
   booktitle = SGPOLD,
   year      = {2004}
 }
+
 
 @inproceedings{Paine2015,
   author    = {Paine, Tom Le and Khorrami, Pooya and Han, Wei and Huang, Thomas S},
@@ -2173,14 +2189,12 @@
   year      = {2015}
 }
 
-
 @inproceedings{Pan2021,
   title     = {{3D} Object Detection with {PointFormer}},
   author    = {Pan, Xuran and Xia, Zhuofan and Song, Shiji and Li, Li Erran and Huang, Gao},
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Panozzo2013,
   author  = {Daniele Panozzo and Ilya Baran and Olga Diamanti and Olga Sorkine-Hornung},
@@ -2226,6 +2240,13 @@
   title   = {Poisson image editing},
   journal = SIG,
   year    = {2003}
+}
+
+@inproceedings{Prakash2019,
+  title     = {Structured domain randomization: Bridging the reality gap by context-aware synthetic data},
+  author    = {Prakash, Aayush and Boochoon, Shaad and Brophy, Mark and Acuna, David and Cameracci, Eric and State, Gavriel and Shapira, Omer and Birchfield, Stan},
+  booktitle = {International Conference on Robotics and Automation (ICRA)},
+  year      = {2019}
 }
 
 @inproceedings{Qi2016,
@@ -2319,6 +2340,13 @@
   number  = {1}
 }
 
+@book{Redko2019,
+  title     = {Advances in Domain Adaptation Theory},
+  author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
+  year      = {2019},
+  publisher = {Elsevier}
+}
+
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
   title     = {Faster {R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
@@ -2332,6 +2360,7 @@
   title   = {{3D-A-Nets}: {3D} deep dense descriptor for volumetric shapes with adversarial networks},
   year    = {2017}
 }
+
 
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
@@ -2362,7 +2391,6 @@
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Ronneberger2015,
   author    = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
@@ -2418,6 +2446,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Savva2016,
   author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
   title     = {{SHREC'16 Track} -- Large-scale {3D} shape retrieval from {ShapeNetCore55}},
@@ -2447,7 +2476,6 @@
   volume  = {38},
   number  = {4}
 }
-
 
 @inproceedings{Sedaghat2016,
   author    = {Nima Sedaghat and Mohammadreza Zolfaghari and Thomas Brox},
@@ -2507,6 +2535,7 @@
   year    = {2007}
 }
 
+
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
   author    = {Sharma, Abhishek and Grau, Oliver and Fritz, Mario},
@@ -2520,6 +2549,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
@@ -2536,7 +2566,6 @@
   volume  = {10},
   number  = {3}
 }
-
 
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
@@ -2555,7 +2584,6 @@
   volume  = {25},
   number  = {3}
 }
-
 
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
@@ -2586,6 +2614,7 @@
   volume  = {43}
 }
 
+
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
   title   = {Unsupervised co-segmentation of a set of shapes via descriptor-space spectral clustering},
@@ -2602,6 +2631,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
   title     = {Deep learning {3D} shape surfaces using geometry images},
@@ -2616,7 +2646,6 @@
   year      = {2017}
 }
 
-
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
   author  = {Sirignano, Justin and Spiliopoulos, Konstantinos},
@@ -2630,7 +2659,6 @@
   booktitle = NIPS,
   year      = {2019}
 }
-
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -2675,6 +2703,7 @@
   year      = {2004}
 }
 
+
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
   title   = {{Dropout}: A simple way to prevent neural networks from overfitting},
@@ -2704,7 +2733,6 @@
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
@@ -2766,6 +2794,7 @@
   organization = {Eurographics Association}
 }
 
+
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
   title     = {Cascaded hand pose regression},
@@ -2798,7 +2827,6 @@
   booktitle = CVPR
 }
 
-
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
   author  = {Tan, Hao and Bansal, Mohit},
@@ -2829,6 +2857,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
@@ -2850,13 +2879,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
   title     = {A signal processing approach to fair surface design},
   booktitle = {SIGGRAPH},
   year      = {1995}
 }
-
 
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
@@ -2872,13 +2901,19 @@
   year      = {2020}
 }
 
+@inproceedings{Tobin2017,
+  title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
+  author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
+  booktitle = {IEEE/RSJ international conference on intelligent robots and systems (IROS)},
+  year      = {2017}
+}
+
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
   title     = {Bilateral filtering for gray and color images},
   booktitle = ICCV,
   year      = {1998}
 }
-
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -2907,6 +2942,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
@@ -2944,7 +2980,6 @@
   booktitle = ICML,
   year      = {2008}
 }
-
 
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
@@ -3045,6 +3080,14 @@
   year      = {2018}
 }
 
+@article{Wang2018d,
+  title   = {Deep visual domain adaptation: A survey},
+  author  = {Wang, Mei and Deng, Weihong},
+  journal = {Neurocomputing},
+  volume  = {312},
+  year    = {2018}
+}
+
 @inproceedings{Wang2019,
   author    = {Wang, Yida and Tan, David Joseph and Navab, Nassir and Tombari, Federico},
   title     = {{ForkNet}: Multi-Branch Volumetric Semantic Completion From a Single Depth Image},
@@ -3103,6 +3146,13 @@
   year      = {2021}
 }
 
+@inproceedings{Wang2021a,
+  title     = {Generalizing to unseen domains: A survey on domain generalization},
+  author    = {Wang, Jindong and Lan, Cuiling and Liu, Chang and Ouyang, Yidong and Zeng, Wenjun and Qin, Tao},
+  booktitle = {IJCAI},
+  year      = {2021}
+}
+
 @misc{Warehouse2018,
   author = {3D Warehouse},
   title  = {{3D Warehouse}},
@@ -3144,12 +3194,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
   title     = {{3D ShapeNets}: A deep representation for volumetric shape modeling},
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
@@ -3197,14 +3249,12 @@
   number  = {4}
 }
 
-
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
-
 
 @article{Wu2021,
   title   = {Cvt: Introducing convolutions to vision transformers},
@@ -3251,6 +3301,7 @@
   volume  = {31},
   number  = {6}
 }
+
 
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
@@ -3304,7 +3355,6 @@
   year      = {2016}
 }
 
-
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
   author  = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
@@ -3342,12 +3392,14 @@
   year      = {2018}
 }
 
+
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
+
 
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
@@ -3381,6 +3433,7 @@
   year      = {2017}
 }
 
+
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -3390,13 +3443,13 @@
   number  = {4}
 }
 
+
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
   title     = {{PVNet}: A joint convolutional network of point cloud and multi-view for {3D} shape recognition},
   year      = {2018}
 }
-
 
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -3414,6 +3467,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -3436,14 +3490,12 @@
   year      = {2009}
 }
 
-
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
   title     = {Visualizing and understanding convolutional networks},
   booktitle = ECCV,
   year      = {2014}
 }
-
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -3460,7 +3512,6 @@
   volume  = {29},
   number  = {6}
 }
-
 
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
@@ -3479,6 +3530,7 @@
   year      = {2014}
 }
 
+
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
   title   = {Variational mesh denoising using total variation and piecewise constant function space},
@@ -3487,6 +3539,7 @@
   volume  = {21},
   number  = {7}
 }
+
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3511,6 +3564,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
   author    = {Zhang, Pingping and Liu, Wei and Lei, Yinjie and Lu, Huchuan and Yang, Xiaoyun},
@@ -3525,7 +3579,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zhang2021,
   title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
   author    = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
@@ -3533,14 +3586,12 @@
   year      = {2021}
 }
 
-
 @inproceedings{Zhao2019,
   author    = {Zhao, Yongheng and Birdal, Tolga and Deng, Haowen and Tombari, Federico},
   booktitle = CVPR,
   title     = {{3D} point capsule networks},
   year      = {2019}
 }
-
 
 @inproceedings{Zhao2020,
   author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
@@ -3605,6 +3656,7 @@
   year      = {2016}
 }
 
+
 @article{Zhou2018,
   author     = {Qian-Yi Zhou and Jaesik Park and Vladlen Koltun},
   title      = {{Open3D}: {A} Modern Library for {3D} Data Processing},
@@ -3619,7 +3671,6 @@
   journal = {arXiv preprint arXiv:2102.13086},
   year    = {2021}
 }
-
 
 @inproceedings{Zhu2017,
   author    = {Zhu, Rui and Galoogahi, Hamed Kiani and Wang, Chaoyang and Lucey, Simon},
