--- a/reference.bib
+++ b/reference.bib
@@ -12,6 +12,7 @@
 @String { EG       = {Comput. Graph. Forum (EG)} }
 @String { ENGCOM   = {Eng. Comput.} }
 @String { ICCV     = {ICCV} }
+@String { IROS     = {IROS} } 
 @String { ICLR     = {ICLR} }
 @String { ICML     = {ICML} }
 @String { IJNME    = {Int. J. Numer. Meth. Eng.} }
@@ -109,6 +110,13 @@
   year      = {2019}
 }
 
+@inproceedings{Armeni2016,
+  title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
+  author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
+  booktitle = CVPR,
+  year      = {2016}
+}
+
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
@@ -155,6 +163,7 @@
   year    = {2020}
 }
 
+
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
   title   = {Mesh segmentation with concavity-aware fields},
@@ -164,11 +173,10 @@
   number  = {7}
 }
 
-
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
-  booktitle = {2011 IEEE International Conference on Computer Vision Workshops},
+  booktitle = {ICCV Workshops},
   year      = {2011}
 }
 
@@ -237,13 +245,13 @@
   number  = {1}
 }
 
+
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
   journal = {arXiv preprint arXiv:1806.01261},
   year    = {2018}
 }
-
 
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
@@ -266,9 +274,9 @@
   title   = {Representation learning: a review and new perspectives},
   year    = {2013},
   volume  = {35},
-  number  = {8},
-  pages   = {1798-1828}
+  number  = {8}
 }
+
 
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
@@ -278,7 +286,6 @@
   volume  = {36},
   number  = {1}
 }
-
 
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
@@ -482,6 +489,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
@@ -499,7 +507,6 @@
   booktitle = CGF
 }
 
-
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -516,6 +523,7 @@
   year      = {2014}
 }
 
+
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -524,7 +532,6 @@
   volume  = {40},
   number  = {4}
 }
-
 
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
@@ -540,6 +547,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -554,7 +562,6 @@
   booktitle = NIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -761,6 +768,7 @@
   year      = {2021}
 }
 
+
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
@@ -778,7 +786,6 @@
   number  = {6}
 }
 
-
 @article{Ebke2014,
   author  = {Ebke, Hans-Christian and Campen, Marcel and Bommes, David and Kobbelt, Leif},
   title   = {Level-of-detail quad meshing},
@@ -788,6 +795,7 @@
   number  = {6}
 }
 
+
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -796,7 +804,6 @@
   volume  = {27},
   number  = {5}
 }
-
 
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
@@ -913,6 +920,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
@@ -929,7 +937,6 @@
   volume  = {27},
   number  = {5}
 }
-
 
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
@@ -982,6 +989,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
   author    = {Gropp, Amos and Yariv, Lior and Haim, Niv and Atzmon, Matan and Lipman, Yaron},
@@ -996,7 +1004,6 @@
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @article{Guennebaud2007,
   author  = {Guennebaud, Ga\"{e}l and Gross, Markus},
@@ -1584,13 +1591,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Kobbelt1998,
   author    = {Kobbelt, L. and Campagna, S. and Vorsatz, J. AND Seidel, H.-P.},
   title     = {Interactive multi-resolution modeling on arbitrary meshes},
   booktitle = {SIGGRAPH},
   year      = {1998}
 }
-
 
 @inproceedings{Koch2019,
   author    = {Koch, Sebastian and Matveev, Albert and Jiang, Zhongshi and Williams, Francis and Artemov, Alexey and Burnaev, Evgeny and Alexa, Marc and Zorin, Denis and Panozzo, Daniele},
@@ -1698,6 +1705,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Lei2020,
   title     = {Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks},
   author    = {Jiabao Lei and Kui Jia},
@@ -1713,7 +1721,6 @@
   year      = {2013},
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
-
 
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
@@ -1750,13 +1757,13 @@
   issn    = {0730-0301}
 }
 
+
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
   author    = {Li, Yangyan and Bu, Rui and Sun, Mingchao and Wu, Wei and Di, Xinhan and Chen, Baoquan},
   booktitle = NIPS,
   year      = {2018}
 }
-
 
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
@@ -1771,7 +1778,6 @@
   journal = TOG,
   year    = {2020}
 }
-
 @article{Li2021,
   title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
   author  = {Li, Ruihui and Li, Xianzhi and Hui, Ke-Hei and Fu, Chi-Wing},
@@ -1780,6 +1786,7 @@
   number  = {4},
   year    = {2021}
 }
+
 @article{Li2021a,
   title   = {Can Vision Transformers Perform Convolution?},
   author  = {Shanda Li and Xiangning Chen and Di He and Cho-Jui Hsieh},
@@ -2010,7 +2017,7 @@
 @inproceedings{Maturana2015,
   author    = {Maturana, Daniel and Scherer, Sebastian},
   title     = {{VoxNet}: A {3D} convolutional neural network for real-time object recognition},
-  booktitle = {International Conference on Intelligent Robots and Systems (IROS)},
+  booktitle = IROS,
   year      = {2015}
 }
 
@@ -2164,6 +2171,7 @@
   year    = {2002}
 }
 
+
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
   author  = {{\"O}ztireli, A Cengiz and Guennebaud, Gael and Gross, Markus},
@@ -2180,7 +2188,6 @@
   booktitle = SGPOLD,
   year      = {2004}
 }
-
 
 @inproceedings{Paine2015,
   author    = {Paine, Tom Le and Khorrami, Pooya and Han, Wei and Huang, Thomas S},
@@ -2354,13 +2361,13 @@
   year      = {2015}
 }
 
+
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
   journal = {arXiv preprint arXiv:1711.10108},
   title   = {{3D-A-Nets}: {3D} deep dense descriptor for volumetric shapes with adversarial networks},
   year    = {2017}
 }
-
 
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
@@ -2439,13 +2446,13 @@
   volume  = {13}
 }
 
+
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
   title     = {Self-supervised deep learning on point clouds by reconstructing space},
   booktitle = NIPS,
   year      = {2019}
 }
-
 
 @inproceedings{Savva2016,
   author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
@@ -2526,6 +2533,7 @@
   number  = {3}
 }
 
+
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2535,7 +2543,6 @@
   year    = {2007}
 }
 
-
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
   author    = {Sharma, Abhishek and Grau, Oliver and Fritz, Mario},
@@ -2543,13 +2550,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
   title     = {{CSGNet}: Neural shape parser for constructive solid geometry},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
@@ -2606,6 +2613,7 @@
   year    = {2019}
 }
 
+
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
@@ -2613,7 +2621,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2624,13 +2631,13 @@
   number  = {6}
 }
 
+
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
   booktitle = NIPS,
   year      = {2002}
 }
-
 
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
@@ -2696,13 +2703,13 @@
   year         = {2019}
 }
 
+
 @inproceedings{Sorkine2004,
   author    = {Sorkine, O. and Cohen-Or, D. and Lipman, Y. and Alexa, M. and R\"{o}ssl, C. and Seidel, H.-P.},
   title     = {Laplacian surface editing},
   booktitle = SGPOLD,
   year      = {2004}
 }
-
 
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
@@ -2784,6 +2791,7 @@
   number  = {2}
 }
 
+
 @article{Sun2009a,
   author       = {Sun, Jian and Ovsjanikov, Maks and Guibas, Leonidas},
   title        = {A concise and provably informative multi-scale signature based on heat diffusion},
@@ -2793,7 +2801,6 @@
   number       = {5},
   organization = {Eurographics Association}
 }
-
 
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
@@ -2848,6 +2855,7 @@
   year      = {2020}
 }
 
+
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -2856,7 +2864,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -2872,13 +2879,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Tatarchenko2017,
   author    = {M. Tatarchenko and A. Dosovitskiy and T. Brox},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
@@ -2904,7 +2911,7 @@
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
-  booktitle = {IEEE/RSJ international conference on intelligent robots and systems (IROS)},
+  booktitle = IROS,
   year      = {2017}
 }
 
@@ -2936,13 +2943,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
   author    = {Ulyanov, Dmitry and Vedaldi, Andrea and Lempitsky, Victor},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
@@ -3121,7 +3128,7 @@
 @inproceedings{Wang2020,
   title   = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
   author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
-  journal = {CVPR Workshops},
+  booktitle = {CVPR Workshops},
   year    = {2020}
 }
 
@@ -3185,6 +3192,7 @@
   number  = {3}
 }
 
+
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
   title   = {Structure recovery via hybrid variational surface approximation},
@@ -3201,7 +3209,6 @@
   booktitle = CVPR,
   year      = {2015}
 }
-
 
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
@@ -3293,6 +3300,7 @@
   year      = {2021}
 }
 
+
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
   title   = {Structure extraction from texture via relative total variation},
@@ -3302,6 +3310,12 @@
   number  = {6}
 }
 
+@inproceedings{Xu2014,
+  author    = {Xu, Hongyi and Barbi\v{c}, Jernej},
+  title     = {Signed Distance Fields for Polygon Soup Meshes},
+  year      = {2014},
+  booktitle = {Proceedings of Graphics Interface}
+}
 
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
@@ -3378,12 +3392,14 @@
   year      = {2017}
 }
 
+
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
   journal = TPAMI,
   year    = {2018}
 }
+
 
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
@@ -3392,14 +3408,12 @@
   year      = {2018}
 }
 
-
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
-
 
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
@@ -3417,6 +3431,7 @@
   year         = {2017}
 }
 
+
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
   title   = {Learning hierarchical shape segmentation and labeling from online repositories},
@@ -3426,13 +3441,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
@@ -3451,6 +3466,7 @@
   year      = {2018}
 }
 
+
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -3460,14 +3476,12 @@
   number  = {3}
 }
 
-
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -3504,6 +3518,7 @@
   year      = {2017}
 }
 
+
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
   title   = {Spectral mesh processing},
@@ -3512,6 +3527,7 @@
   volume  = {29},
   number  = {6}
 }
+
 
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
@@ -3530,7 +3546,6 @@
   year      = {2014}
 }
 
-
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
   title   = {Variational mesh denoising using total variation and piecewise constant function space},
@@ -3540,7 +3555,6 @@
   number  = {7}
 }
 
-
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -3549,6 +3563,7 @@
   volume  = {34},
   issue   = {7}
 }
+
 
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
@@ -3563,7 +3578,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3600,6 +3614,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Zhao2021,
   title     = {Point transformer},
   author    = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
@@ -3615,7 +3630,6 @@
   volume  = {17},
   number  = {10}
 }
-
 
 @inproceedings{Zheng2013,
   author    = {Zheng, Bo and Zhao, Yibiao and Yu, Joey C. and Ikeuchi, Katsushi and Zhu, Song-Chun},
@@ -3640,6 +3654,7 @@
   number  = {3}
 }
 
+
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
   title   = {Data-parallel octrees for surface reconstruction},
@@ -3655,7 +3670,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @article{Zhou2018,
   author     = {Qian-Yi Zhou and Jaesik Park and Vladlen Koltun},
@@ -3685,6 +3699,8 @@
   year      = {2020},
   booktitle = CVPR
 }
+
+
 
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
